--- a/css/main.css
+++ b/css/main.css
@@ -241,6 +241,7 @@ textarea {
 			background: #FF2908;
 			border: none;
 			}
+		
 		.search_box{
 			border-radius:5px;
 			background: ;
@@ -255,7 +256,7 @@ textarea {
 			margin-top: 30px;
 			padding-right: 100px;
 			text-align: right;	
-				}
+			}
 				
 		.menu {				
 				background: #9E1002; #linear-gradient(to bottom, #FF2908 0%, #FFB70F 100%);
@@ -263,7 +264,7 @@ textarea {
 				width: 100%;				
 				margin-left:auto;
 				margin-right:auto;
-				margin-top: -40px;	
+				margin-top: -50px;	
 				#margin-bottom: 10px;
 			}
 		.menu ul li{
@@ -279,6 +280,45 @@ textarea {
 				border: none;
 				color: #000;
 			}
+		ul li ul.submenu{
+			margin-top: 50px;
+			background: #fff;
+			border: 1px solid red;
+			height: auto;
+			width: 500px;
+			display: none;
+			}
+		
+		ul li ul.submenu li{
+				display:block;
+				color: #000;
+				width: auto;
+				font-weight: normal;
+				margin-right: 10px;
+				padding: 5px;
+			}
+		.heading{
+			font-weight:bold;
+			font-size: 12px;
+			text-align:center;
+		}
+		
+		.listing{
+			font-weight:normal;
+			text-align:left;
+		}
+		
+		.wep_popup {
+			#font-weight:bold;
+			font-size: 12px;
+			clear: left;
+			left: 182px;
+			position: absolute;
+			top: 128px;
+			width: 85%;
+			height: auto;
+			z-index: 100100;
+		}	
 		.menu ul li:hover{
 				background: linear-gradient(to bottom, #FF6160 0%, #9E1002 100%);
 				#border: 1px solid #FF2908;
