--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,71 @@ textarea {
 			padding-right: 100px;
 			text-align: right;	
 			}
+		
+		#twitter_btn{
+			background:#32DEF6;
+			border:#32DEF6;
+		}
+		
+		#facebook_btn{
+			background:#4B6DAA;
+			border:#4B6DAA;
+		}
+		#google_btn{
+			background:#E46145;
+			border:#E46145;
+		}
+		#linked_in_btn{
+			background:#0088B5;
+			border:#0088B5;
+		}
+		
+		.social_button{
+			background: blue;
+			cursor:pointer;
+			color:#fff;
+			padding: 3px;
+			margin-bottom: 5px;
+			width: 260px;
+			border-radius: 5px;
+		}
 				
+		#social_signup{
+			position:relative;
+			top: 10px;
+			left: 480px;
+			display:inline-block;
+			width: 35%;
+			height:auto;
+		}
+		
+		#submitBtn{
+			width: 120px;
+			padding: 5px;
+			border-radius: 5px;
+			background: #0088B5;
+			color: #fff;
+			border: #0088B5 2px solid;
+			margin-left: 30px;
+		}
+		
+		#login_block{
+			margin-top: -50px;
+			position: absolute;
+			display:inline-block;
+			width: 60%;
+			height:auto;
+			top: 100px;
+			#left: 30px;
+		}
+		#login_pop{
+			#margin-top: -50px;
+			#display:none;
+			padding:10px; 
+			background:#fff;
+			height:400px;
+			width:97%;
+		}
 		.menu {				
 				background: #9E1002; #linear-gradient(to bottom, #FF2908 0%, #FFB70F 100%);
 				height :40px;
